# lightretriever

./: .gitignore  README.md  pyproject.toml
config/: ds_stage3.yaml  ds_stage3_w_config.yaml  fsdp_full_shard.yaml  fsdp_hybrid_shard.yaml  fsdp_shard_grad_op.yaml  fsdp_v2_full_shard.yaml  fsdp_v2_shard_grad_op.yaml
config/data/: exp-m.json
config/data/single_dataset/: PAQ_pairs_100k.json  S2ORC_title_abstract_100k.json  agnews.json  allnli.json  altlex.json  amazon-qa.json  amazon_review_2018_1m.json  cMedQA2.json  ccnews_title_text.json  cnn_dailymail.json  cnn_dailymail_splitted.json  codesearchnet.json  dureader.json  eli5_question_answer.json  fever.json  fiqa.json  gooaq_pairs.json  hotpotqa.json  medmcqa.json  miracl.json  mr_tydi_combined.json  msmarco.json  nfcorpus.json  npr.json  nq.json  quora_duplicates_triplets.json  scifact.json  searchqa_top5_snippets.json  sentence-compression.json  simplewiki.json  specter_train_triples.json  squad_pairs.json  stackexchange_duplicate_questions_body_body.json  stackexchange_duplicate_questions_title-body_title-body.json  stackexchange_duplicate_questions_title_title.json  synthetic.json  t2ranking.json  trivia.json  wikianswers_100k.json  wikihow.json  (+4 more)
eval/: README.md  call_evaluate_mteb.sh  eval_arguments.py  eval_utils.py  evaluate_mteb.py  mteb_metrics.py  prompts.py
eval/mteb_utils/: BM25FixedInstructionRetrievalEvaluator.py
scripts/: asymmetric_dense_infer.ipynb  asymmetric_sparse_infer.ipynb  cache_emb_bag.ipynb  finetune_example.sh
src/lightretriever/: __init__.py  arguments.py  scheduler.py  trainer.py
(+37 files in other folders)
