[project]
name = "lightretriever"
version = "0.0.1"
dependencies = [
  "numpy<=1.26.4",  # Faiss does not support numpy2
  "faiss>=1.7.4",   # Please build from source / install via Conda
  "torch>=2.2.2",
  "transformers>=4.47.0",
  "deepspeed>=0.14.1",
  "accelerate>=0.28.0",
  "flash-attn>=2.5.6",
  "liger-kernel>=0.5.2",
  "datasets>=2.18.0",
  "peft>=0.10.0",
  "fire>=0.6.0",
  "orjson>=3.10.0",
  "pandas>=2.2.1",
  "tensorboard>=2.16.2",
  "wandb>=0.16.5",
  "tabulate>=0.9.0",
  "openpyxl>=3.1.2",
  "Cython>=3.0.11",
  "pyjnius>=1.6.1",
  "sentence_transformers>=3.0.0",
  "mteb>=1.14.15",
  "sparse-emb-util>=0.2.0",
  "GradCache@git+https://github.com/ma787639046/GradCache",
]
requires-python = ">=3.11"
authors = [
  {name = "Guangyuan Ma", email = "Ma787639046@outlook.com"},
]
maintainers = [
  {name = "Guangyuan Ma", email = "Ma787639046@outlook.com"},
]
description = "Code Releases of Research Paper - LightRetriever: A LLM-based Hybrid Retrieval Architecture with 1000× Faster Query Inference."
readme = "README.md"
license = {file = "LICENSE"}
keywords = ["LightRetriever", "SentenceTransformers", "LLM Embedding"]
classifiers = [
  "Development Status :: 1 - Beta",
  "Programming Language :: Python"
]

[project.optional-dependencies]
dataprocess = [
  "jieba>=0.42.1",
  "jionlp>=1.5.11",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
